--- a/nginx.conf
+++ b/nginx.conf
@@ -19,9 +19,7 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    log_format  quic  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for" "$http3"';
+    log_format  quic '[$request $status] $remote_addr [$time_local] remote_user: $remote_user body_bytes_sent: $body_bytes_sent http_referer: $http_referer http_user_agent: $http_user_agent http_x_forwarded_for: $http_x_forwarded_for http3: $http3';
 
     access_log  /var/log/nginx/access.log  quic;
 
