--- a/tests/https.conf
+++ b/tests/https.conf
@@ -6,7 +6,7 @@ server {
     # http/2 and http/1.1
     listen 443 ssl;
     http2 on;
-    server_name localhost;
+    server_name xhzq.xyz;
 
     # openssl-generated pair for local development
     # https://letsencrypt.org/docs/certificates-for-localhost/
@@ -28,7 +28,12 @@ server {
 
         gzip_static on;
         brotli_static on;
+        sendfile on;
 
         expires 1d;
+    }
+
+    location /test {
+        return 200 '[$request $status] $remote_addr [$time_local] remote_user: $remote_user body_bytes_sent: $body_bytes_sent http_referer: $http_referer http_user_agent: $http_user_agent http_x_forwarded_for: $http_x_forwarded_for http3: $http3';
     }
 }
